---- Changes since 1.270 ----
Added a new monitor type for FTP servers.
For each monitor, multiple remote hosts can be selected, which makes checking a service like Apache across a range of servers easier.
Updated the network traffic monitor to support FreeBSD as well as Linux.
Added a new monitor type for performing a test SQL query on a MySQL, PostgreSQL or Oracle database.
---- Changes since 1.290 ----
Added an option to the HTTP monitor type to check the page contents too.
The Check File monitor can now perform size checks on the total contents of a directory.
---- Changes since 1.300 ----
Added a monitor type for the rate of disk space consumption.
---- Changes since 1.310 ----
Added the ability to create monitors that apply to Webmin server groups, rather than selecting individual machines one at a time.
Added a new Alive System monitor type, which is useful when used remotely to just determine if a machine is up.
---- Changes since 1.320 ----
Fixed the Refresh Status button to work regardless of the selected execution hours or days.
Added a new monitor type for testing a remote SSH server.
---- Changes since 1.330 ----
Added an option to the Remote SSH monitor type to not actually login, just check if we can get to the login prompt.
Converted the UI for all monitors to use ui-lib.pl, for easier theming.
Added support for sending status messages via SMS, for common US mobile carriers.
---- Changes since 1.370 ----
Failure to run a command on a remote system is now properly detected.
---- Changes since 1.390 ----
Added T-COM, Skytel, Vodaphone and several more as a carriers for SMS.
---- Changes since 1.400 ----
Email, SMS and SNMP messages sent by Webmin can be customized, with multiple message templates defined and a different one selected for each monitor.
---- Changes since 1.410 ----
The process check monitor can now be limited to a particular user.
---- Changes since 1.420 ----
Allow saving of remote Webmin monitors when the remote host is down.