@@ -460,10 +460,19 @@ dtmpls_err=Failed to delete templates
 dtmpls_enone=None selected
 dtmpls_eusers=$1 is in use by the following monitors : $2
 
-sslcert_url=SSL URL to check certificate for
+sslcert_src=Certificate location
+sslcert_url=From HTTPS URL
+sslcert_file=From file on server
 sslcert_eurl=Missing, invalid or non-SSL URL
+sslcert_efile=Missing or invalid certificate file
 sslcert_ecert=Could not get certificate
 sslcert_days=Days before expiry to fail
 sslcert_when=When expired
 sslcert_mismatch=Also detect hostname mismatch?
 sslcert_edays=Missing or invalid number of days
+sslcert_eopenssl=The <tt>openssl</tt> command is needed to check certificates
+sslcert_estart=Not valid until $1
+sslcert_eend=Not valid after $1
+sslcert_left=Up - $1 days until expiry
+sslcert_ematch=Hostname $1 does not match certificate $2
+sslcert_emismatch=Certificate hostname checking can only be used when checking a URL
